# HercControl

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  changelog.txt
.github/workflows/: ccpp.yml
src/: HercControl.cpp  config.h.in
test/: basictest.cmd  basictest.sh  make.cmd  make.conf  make.sh
